# virtuai-office

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  alembic.ini  deploy-apple-silicon.sh  docker-compose.yml  fix.sh  pyproject.toml  repo_setup_script.sh  start.sh  status.sh  stop.sh
backend/: __init__.py  asgi.py  backend.py  backend_fixed.py  backend_old.py  cli.py  database.py  requirements.txt
backend/agents/: agent_manager.py  alice_chen.py  backend_dev.py  qa_tester.py  ui_designer.py
backend/api/: agents.py  apple_silicon.py  boss.py  deps.py  main.py  projects.py  tasks.py  websockets.py
backend/core/: logging.py  middleware.py  security.py
backend/generators/: file_generator.py  zip_creator.py
backend/migrations/: env.py
backend/orchestration/: boss_ai.py  collaboration.py  performance.py  scheduler.py  workflow.py
backend/services/: analytics.py  notification.py  websocket.py
backend/utils/: constants.py  helpers.py  logging.py
backend/workflow/: project_workflow.py
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
docs/api/: endpoints.md
docs/guides/: advanced-usage.md  optimization.md
examples/configurations/: development.env  production.env
examples/integrations/github-actions/: README.md
examples/integrations/slack-bot/: commands.py
examples/integrations/vscode-extension/: README.md
examples/tutorials/: advanced-usage.md  getting-started.md
frontend/: .gitignore  package-lock.json  package.json
frontend/public/: index.html  manifest.json  sw.js
frontend/src/: App.css  App.js  index.css  index.js
frontend/src/components/: AgentPerformanceDashboard.js  (+5 more)
scripts/: check-health.sh  deploy.sh  optimize-apple-silicon.sh  performance-test.sh  test.sh  update-models.sh  verify-deployment.sh
tests/e2e/: test_task_lifecycle.py  test_user_journey.py
tests/fixtures/: test_agents.py  test_data.py
tests/integration/: test_agent_collaboration.py  test_apple_silicon_optimization.py  test_full_workflow.py  test_websocket.py
tests/mocks/: mock_agents.py  mock_database.py  mock_ollama.py  mock_websocket.py
tests/unit/: test_agents.py  test_api.py  test_apple_silicon.py  test_boss_ai.py  test_database.py  test_task_assignment.py
virtuai-office/: .env.example  CHANGELOG.md  deploy.sh  jest.config.js  patch.sh  pyproject.toml  setup.sh  tailwind.config.js
virtuai-office/.github/workflows/: ci.yml
virtuai-office/backend/: config.py  main.py  wsgi.py
virtuai-office/backend/agents/: __init__.py  agent_factory.py  base_agent.py  frontend_dev.py  product_manager.py
virtuai-office/backend/api/: __init__.py  health.py
virtuai-office/backend/apple_silicon/: __init__.py  benchmarks.py  dashboard.py  detector.py  models.py  monitor.py  optimizer.py
virtuai-office/backend/core/: __init__.py  config.py  exceptions.py
virtuai-office/backend/migrations/: script.py.mako
virtuai-office/backend/orchestration/: __init__.py  task_assignment.py
virtuai-office/backend/services/: __init__.py  background_tasks.py  ollama.py
virtuai-office/backend/utils/: __init__.py  formatters.py  security.py  validators.py
virtuai-office/docs/: DEPLOYMENT.md  FAQ.md  INTEGRATIONS.md  PERFORMANCE.md  README.md  SECURITY.md
virtuai-office/docs/api/: examples.md
virtuai-office/docs/guides/: best-practices.md  getting-started.md  troubleshooting.md
virtuai-office/examples/: README.md
virtuai-office/examples/configurations/: docker-setup.yml
virtuai-office/examples/integrations/github-actions/: auto-review.yml  virtuai-task.yml
virtuai-office/examples/integrations/slack-bot/: README.md  bot.py
virtuai-office/examples/integrations/vscode-extension/: extension.js
virtuai-office/examples/tutorials/: apple-silicon-setup.md  best-practices.md  troubleshooting.md
virtuai-office/frontend/: README.md
virtuai-office/frontend/public/: index.html
virtuai-office/frontend/src/: App.css  App.test.js  reportWebVitals.js  setupTests.js
virtuai-office/frontend/src/components/: AgentCards.js  AppleSiliconDashboard.js  BossAI.js  BossAIDashboard.js  CollaborationWorkflow.js  Dashboard.js  EnhancedAgentCard.js  TaskDetails.js  TaskDetailsModal.js  TaskManager.js
virtuai-office/frontend/src/contexts/: AppContext.js
virtuai-office/frontend/src/hooks/: useApi.js  useFocusManagement.js  useNotifications.js  useWebSocket.js
virtuai-office/frontend/src/styles/: animations.css  components.css  globals.css
virtuai-office/frontend/src/tests/__mocks__/: api.js
virtuai-office/frontend/src/tests/components/: AgentCards.test.js  Dashboard.test.js
virtuai-office/frontend/src/tests/hooks/: useApi.test.js  useWebSocket.test.js
virtuai-office/frontend/src/utils/: formatting.js  validation.js
virtuai-office/scripts/: backup.sh  cleanup.sh  generate-docs.sh  setup.sh
virtuai-office/tests/: conftest.py
virtuai-office/tests/e2e/: test_system_performance.py
virtuai-office/tests/fixtures/: mock_responses.py
virtuai-office/tests/integration/: test_api_endpoints.py
virtuai-office/tests/unit/: test_orchestration.py  test_performance.py
(+17 files in other folders)
